--- a/_posts/2012-04-11-jenkins_fr.textile
+++ b/_posts/2012-04-11-jenkins_fr.textile
@@ -62,7 +62,7 @@ p. Lancez jenkins depuis la ligne de commande (depuis le répertoire de jenkins)
 @java.exe -jar jenkins.war@
 Attendre le lancement et dans le navigateur chargez la page "http://localhost:8080/":http://localhost:8080/
 
-!../images/Jenkins_01_ecran_principal.png(Ecran principal de Jenkins avec 2 projets configurés)!
+p=. !../images/Jenkins_01_ecran_principal.png(Ecran principal de Jenkins avec 2 projets configurés)!
 
 p=. _Ecran principal de Jenkins avec 2 projets configurés_
 
