--- a/_posts/2012-04-11-jenkins_fr.textile
+++ b/_posts/2012-04-11-jenkins_fr.textile
@@ -120,7 +120,7 @@ Il peut cependant être nécessaire de reconstruire entièrement le projet (dans
 A ce stade, vous pouvez lancer un build et vérifier que votre projet est bien rapatrié du dépôt Git et compile. Pour cela, n’oubliez pas de sauver la configuration puis cliquez sur "Lancer un build":http://localhost:8080/job/JenkinsTest/build?delay=0sec .
 Si le build ne marche pas ou que le résultat attendu n’est pas le bon, vous pouvez maintenant et tout au long de la configuration des différentes  étapes voir les logs de déroulement de chaque build en affichant la page “Sortie Console” du build souhaité.
 
-!../images/Jenkins_07_resultat_compilation.png(Ecran de résultat d'un build avec l'ensemble des métriques disponibles)!
+p=. !../images/Jenkins_07_resultat_compilation.png(Ecran de résultat d'un build avec l'ensemble des métriques disponibles)!
 
 p=. _Ecran de résultat d'un build avec l'ensemble des métriques disponibles_
 
@@ -150,7 +150,7 @@ A ce stade, vous pouvez lancer un build et vérifier que les tests sont bien exe
 
 L’execution de 2 builds avec des résultats fait ainsi apparaitre un graphe représentant l’évolution du nombre de tests en échec sur le projet.
 
-!../images/Jenkins_08_resultat_tests.png(Résultats des tests untaires des différents builds)!
+p=. !../images/Jenkins_08_resultat_tests.png(Résultats des tests untaires des différents builds)!
 
 p=. _Résultats des tests untaires des différents builds_
 
@@ -187,7 +187,7 @@ Sauvez et executez un build pour obtenir des résultats.
 
 Un nouveau lien “Couverture de code” apparaît sur la page du projet nous permettant de consulter le rapport généré.
 
-!../images/Jenkins_09_couverture.png(Résultats de la couverture de code)!
+p=. !../images/Jenkins_09_couverture.png(Résultats de la couverture de code)!
 
 p=. _Résultats de la couverture de code_
 
@@ -224,7 +224,7 @@ Aller dans “Administrer Jenkins” puis "Configurer le système":http://localh
 
 Sauvez, buildez et contemplez les résultats :)
 
-!../images/metrique_01_CCM.png(Suivi de la complexité du code pour les différents builds)!
+p=. !../images/metrique_01_CCM.png(Suivi de la complexité du code pour les différents builds)!
 
 p=. _Suivi de la complexité du code pour les différents builds_
 
@@ -295,7 +295,7 @@ Il reste à configurer le plugin de façon à prendre en compte les fichiers gé
 
 Le plugin est configuré et un graphe regroupant les diverses métriques devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Violations” est également disponible dans la colonne de gauche.
 
-!../images/Jenkins_10_metriques_violation.png(Graphe de suivi des métriques d'analyse de code)!
+p=. !../images/Jenkins_10_metriques_violation.png(Graphe de suivi des métriques d'analyse de code)!
 
 p=. _Graphe de suivi des métriques d'analyse de code_
 
@@ -310,7 +310,7 @@ Puis configurez les options suivantes :
 
 Le plugin est configuré et un graphe “Open Tasks Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Tâches ouvertes” est également disponible dans la colonne de gauche.
 
-!../images/metrique_02_OpenTasks.png(Suivi des tâches laissées ouverte dans le code source)!
+p=. !../images/metrique_02_OpenTasks.png(Suivi des tâches laissées ouverte dans le code source)!
 
 p=. _Suivi des tâches laissées ouverte dans le code source_
 
@@ -323,7 +323,7 @@ Dans la configuration du projet et activez la case à cocher “Publish duplicat
 Puis configurez l’option “Duplicate code results” par le nom du fichier xml de résultat (pour nous : simian-output.xml )
 Le plugin est maintenant configuré et, comme le plugin “Task Scanner Plugin”, un graphe “Duplicate Code Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Duplicate Code” est également disponible dans la colonne de gauche pour parcourir les résultats...
 
-!../images/metrique_06_Similarités.png(Affichage des similarités, ou code dupliqué, dans le dernier build)!
+p=. !../images/metrique_06_Similarités.png(Affichage des similarités, ou code dupliqué, dans le dernier build)!
 
 p=. _Affichage des similarités, ou code dupliqué, dans le dernier build_
 
@@ -334,7 +334,7 @@ Ce plugin permet l’affichage, la comptabilisation et le suivi des warnings lor
 Dans la configuration du projet et activez la case à cocher “Scan for compiler warnings” et cliquez sur le bouton “ajouter” à côté du texte “Scan console log” et sélectionnez le parser “MSBuild”.
 Le plugin est maintenant configuré et, comme le plugin “Task Scanner Plugin”, un graphe “Compiler Warnings Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Compiler Warnings” est également disponible dans la colonne de gauche pour parcourir les résultats..
 
-!../images/metrique_03_Warnings.png(Suivi des Warnings de compilation)!
+p=. !../images/metrique_03_Warnings.png(Suivi des Warnings de compilation)!
 
 p=. _Suivi des Warnings de compilation_
 
